# chimera-md

./: .dockerignore  .gitignore  CLAUDE.md  CONVERSATION-SUMMARY.md  Cargo.toml  DOCUMENTATION-IMPROVEMENTS.md  Dockerfile  License.txt  bacon.toml  chimera.toml  compose.yaml  example.toml  native-dockerfile  readme.md  test-deploy.sh  todo.md
.cargo/: config.toml
.github/workflows/: docker.yml
.zed/: tasks.json
docker/: Dockerfile  SSL-README.md  chimera.toml  compose.yaml  mac-build.sh  mac-container.sh  multi-build.sh  nginx-compose.yaml  setup-ssl.sh  traefik-compose.yaml
docker/home/: index.md
docker/nginx/: nginx.conf
example/: chimera.toml  image-sizes.toml
example/log/: chimera.log.2024-11-25  chimera.log.2024-11-30  chimera.log.2024-12-01  chimera.log.2024-12-04  chimera.log.2024-12-05  chimera.log.2024-12-06  chimera.log.2024-12-07
example/search/: .managed.json  ft.toml  meta.json
example/style/: skeleton.css
example/template/: dialog.html  site-footer.html  site-header.html  site-menu.html
example/template-internal/: breadcrumbs.html  doclinks.html  error.html  footer.html  header.html  site-menu.html
example/templates/: breadcrumbs.html  index.html  peers.html  site-header.html
examples/: Example 1.md  Example 2.md  dialog-test-1.md  dialog-test-2.md  documentation.md  example1.md  example2.md  index.html  index.md
examples/script/: dialog.js
examples/style/: site.css
examples/tests/: Backslash escapes.html  Blockquotes with code blocks.html  Hard-wrapped paragraphs with list-like lines.html  Horizontal rules.html  Inline HTML (Advanced).html  Inline HTML comments.html  Links, inline style.html  Links, reference style.html  Literal quotes in titles.html  Markdown Documentation - Basics.html  Markdown Documentation - Basics.md  Markdown Documentation - Syntax.md  Strong and em together.html
log/: chimera.log.2024-12-07
src/: access_log_format.rs  cache_info.rs  chimera_error.rs  document_scraper.rs  file_manager.rs  full_text_index.rs  html_generator.rs  image_size_cache.rs  main.rs  perf_timer.rs  result_cache.rs  title_finder.rs  toml_config.rs
style/: chimera.css  site.css  skeleton.css
styles/: chimera.css  skeleton.css
templates/: breadcrumbs.html  chimera.css  dialog.html  doclinks.html  error.hbs  error.html  folders.html  footer.hbs  footer.html  header.hbs  header.html  index-helper.html  index.hbs  index.html  markdown.hbs  markdown.html  peers.html  search.hbs  search.html  search_results.html  sidebar.hbs  sidebar.html  site-footer.html  site-header.html
www/: documentation.md  example1.md  index.md  labeled-headers.md
www/styles/: chimera.css  skeleton.css
www/tests/: Amps and angle encoding.html  Auto links.html  Backslash escapes.html  Blockquotes with code blocks.html  Hard-wrapped paragraphs with list-like lines.html  Horizontal rules.html  Inline HTML (Advanced).html  Inline HTML (Simple).html  Inline HTML comments.html  Links, inline style.html  Links, reference style.html  Literal quotes in titles.html  Markdown Documentation - Basics.html  Markdown Documentation - Basics.md  Markdown Documentation - Syntax.html  Tabs.html  (+5 more)
(+27 files in other folders)
