[package]
name = "chimera-md"
version = "0.4.5"
edition = "2021"
authors = ["Alexander Barrentine", "Alexander Barrentine <acbarrentine@gmail.com>"]
description = "A Markdown-aware web server"

[dependencies]
pulldown-cmark = "0.12.2"
tokio = { version = "1.42.0", features = ["full", "test-util"] }
axum = { version = "0.7.9", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "compression-gzip"] }
tera = "1.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.215", features = ["derive"] }
urlencoding = "2.1.3"
clap = { version = "4.5.23", features = ["derive", "env"] }
regex = { version = "1.11.1"}
tantivy = "0.22.0"
walkdir = "2.5.0"
async-watcher = "0.3.0"
toml = "0.8.19"
indexmap = { version = "2.7.0", features = ["serde"] }
slugify = "0.1.0"
yaml-rust2 = "0.9.0"
tracing-appender = "0.2.3"
lazy_static = "1.5.0"

[profile.release]
codegen-units = 1
lto = "fat" 
strip = "debuginfo"

[features]
default = ["detailed-timing"]
detailed-timing = []
